@@ -15,3 +15,6 @@ debug = 0
 
 # cat=basic; type=boolean; label=Recreate URI to create cache files: Recreate URI by typoLink to have a vaild cached file name
 recreateURI = 0
+
+# cat=basic; type=boolean; label=Mark dirty instead of deletion: Mark a cached element as dirty instead of delete it directly
+markDirtyInsteadOfDeletion = 0
